fix: make course memo pdf prev files versioning
